# Privacy-Preserving-Image-Grayscaler

./: .gitignore  CMakeLists.txt  README.md  makefile
src/client/: client.cpp
src/encryption/: encryption.cpp  encryption.h  encryptor.cpp  encryptor.h  polynomial.cpp  polynomial.h  quotient_ring_polynomial.cpp  quotient_ring_polynomial.h
src/image/: image.cpp  image.h  image_encryptor.h  network.cpp  network.h
src/server/: server.cpp
